Remove all Todo related API endpoints
